--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Ignore node_modules directory
 node_modules/
 
+# Ignore dist/ directory
+dist/
+
 # Ignore package-lock.json file
 package-lock.json
 
@@ -9,3 +12,6 @@ package.json
 
 # Ignore .hintrc file
 .hintrc
+
+# Ignore .env file
+.env
